@@ -13,11 +13,11 @@
 		<email>roundcube@tehinterweb.co.uk</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-01-15</date>
-	<time>11:36:43</time>
+	<date>2012-01-21</date>
+	<time>11:26:15</time>
 	<version>
-		<release>1.0</release>
-		<api>1.0</api>
+		<release>1.3</release>
+		<api>1.3</api>
 	</version>
 	<stability>
 		<release>stable</release>
@@ -53,6 +53,10 @@
 			<file name="skins/default/messageactions.gif" role="data"/>
 			<file name="skins/default/messageactions.png" role="data"/>
 			<file name="skins/default/quickrules.css" role="data"/>
+			<file name="skins/larry/ie6hacks.css" role="data"/>
+			<file name="skins/larry/mail_toolbar.png" role="data"/>
+			<file name="skins/larry/messageactions.png" role="data"/>
+			<file name="skins/larry/quickrules.css" role="data"/>
 		</dir>
 		<!-- / -->
 	</contents>
